<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">COMP204 - Assignment 2</string>
    <string name="title_activity_start">COMP204</string>
    <string name="title_activity_overworld">Overworld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_create_character">Create Character</string>
	<string name="attributes">Attributes</string>
	<string name="strength">Strength</string>
	<string name="dexterity">Dexterity</string>
	<string name="power">Power</string>
	<string name="attributes_left">Attributes Left:</string>
	<string name="create">Create</string>
	<string name="goToOverworld">Go To Overworld</string>
	<string name="goToBattle">Go To Battle</string>
	<string name="btnLeft">L</string>
	<string name="title_activity_battle">BattleActivity</string>
	<string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    
</resources>
