<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nz.ac.waikato.cms.comp204.assignment2.CreateCharacterActivity" >

    <TextView
        android:id="@+id/lblAttributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attributes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAttributes"
        android:layout_below="@+id/lblAttributes"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/strength"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblDexterity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblStrength"
        android:layout_below="@+id/lblStrength"
        android:layout_marginTop="15dp"
        android:text="@string/dexterity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDexterity"
        android:layout_below="@+id/lblDexterity"
        android:layout_marginTop="15dp"
        android:text="@string/power"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblStrength"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/lblStrength"
        android:ems="5"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/txtDexterity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblDexterity"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/lblDexterity"
        android:ems="5"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/txtPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblPower"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/lblPower"
        android:ems="5"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtAttributesLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblAttributes"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/txtDexterity"
        android:text="@string/attributes_left"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
</RelativeLayout>
